--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -7,7 +7,8 @@
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+             xmlns:models="clr-namespace:WindowLib.Models;assembly=WindowLib"
              Loaded="UserControl_Loaded">
     
     <prism:Dialog.WindowStyle>
@@ -119,7 +120,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="参照日"/>
-                        <DatePicker Grid.Column="1" x:Name="ReferenceDate" SelectedDate="{Binding ReferenceDate}" Language="ja"/>
+                        <models:DatePickerEx Grid.Column="1" x:Name="ReferenceDate" SelectedDate="{Binding ReferenceDate}"/>
                         <Button Grid.Column="2" Content="参照" Command="{Binding Refer}" Margin="3" Focusable="False" IsEnabled="{Binding IsEdit}"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                     </Grid>
@@ -175,10 +176,10 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="適用開始日・無効日"/>
-                        <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}" Language="ja"
+                        <models:DatePickerEx Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                        <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}" Language="ja"
+                        <models:DatePickerEx Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease}"/>
                         <Button Grid.Column="4" Content="解除" Command="{Binding Release}" Margin="3" Focusable="False"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
