--- a/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
+++ b/src/DistLargeGroup/Views/InputDistLargeGroupDlg.xaml
@@ -5,7 +5,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:models="clr-namespace:WindowLib.Models;assembly=WindowLib"
              Loaded="UserControl_Loaded">
 
     <prism:Dialog.WindowStyle>
@@ -105,7 +105,7 @@
 
                     <Label Grid.Column="0" Content="参照日"/>
                     <StackPanel Orientation="Horizontal" Grid.Column="1">
-                        <DatePicker SelectedDate="{Binding ReferenceDate}" Language="ja" Width="200" x:Name="ReferenceDate"/>
+                        <models:DatePickerEx SelectedDate="{Binding ReferenceDate}" Language="ja" Width="200" x:Name="ReferenceDate"/>
                         <Button Grid.Column="2" Content="参照" Command="{Binding ReferCommand}" Margin="3" IsEnabled="{Binding IsEdit}" Focusable="False"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}" Width="80"/>
                     </StackPanel>
@@ -148,10 +148,10 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="適用開始日・無効日"/>
-                    <DatePicker Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}" Language="ja"
+                    <models:DatePickerEx Grid.Column="1" SelectedDate="{Binding DtTekiyoKaishi}" Language="ja"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease,UpdateSourceTrigger=PropertyChanged}"/>
                     <Label Grid.Column="2" Content="～" HorizontalAlignment="Center"/>
-                    <DatePicker Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
+                    <models:DatePickerEx Grid.Column="3" SelectedDate="{Binding DtTekiyoMuko}"
                                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Left" IsEnabled="{Binding IsDateRelease,UpdateSourceTrigger=PropertyChanged}"/>
                     <Button Grid.Column="4" Content="解除" Command="{Binding ReleaseCommand}" Margin="3" Focusable="False"
                                 Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=Height}"/>
