--- a/src/lib/WindowLib/Resources/Standard.xaml
+++ b/src/lib/WindowLib/Resources/Standard.xaml
@@ -2,8 +2,7 @@
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:prism="http://prismlibrary.com/"
-                    >
+                    xmlns:prism="http://prismlibrary.com/" xmlns:models="clr-namespace:WindowLib.Models">
 
     <ResourceDictionary.MergedDictionaries>
         <materialDesign:MahAppsBundledTheme BaseTheme="Light" PrimaryColor="Teal" SecondaryColor="Blue"/>
@@ -187,6 +186,10 @@
     </ControlTemplate>
 
     <Style TargetType="DatePicker" BasedOn="{StaticResource MaterialDesignDatePicker}">
+        <Setter Property="Language" Value="ja" />
+    </Style>
+
+    <Style TargetType="models:DatePickerEx" BasedOn="{StaticResource MaterialDesignDatePicker}">
         <Setter Property="Language" Value="ja" />
     </Style>
 
