--- a/src/Mapping/Views/DeliveryDateDialog.xaml
+++ b/src/Mapping/Views/DeliveryDateDialog.xaml
@@ -5,7 +5,8 @@
              xmlns:prism="http://prismlibrary.com/"             
              Loaded="UserControl_Loaded"
              Padding="20"
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:models="clr-namespace:WindowLib.Models;assembly=WindowLib">
     <prism:Dialog.WindowStyle>
         <Style TargetType="Window" BasedOn="{StaticResource DialogWindow}"/>
     </prism:Dialog.WindowStyle>
@@ -33,8 +34,7 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="納品日：" VerticalAlignment="Center"/>
-            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Width="200" PreviewKeyDown="DatePicker_PreviewKeyDown" Language="ja"
-                            DateValidationError="DatePicker_DateValidationError"/>
+            <models:DatePickerEx x:Name="Date" SelectedDate="{Binding Date}" Width="200" PreviewKeyDown="DatePicker_PreviewKeyDown" Language="ja"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
