--- a/src/BoxExpoter/Views/DeliveryDateDialog.xaml
+++ b/src/BoxExpoter/Views/DeliveryDateDialog.xaml
@@ -1,7 +1,8 @@
 ﻿<UserControl x:Class="BoxExpoter.Views.DeliveryDateDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:models="clr-namespace:WindowLib.Models;assembly=WindowLib"
              Loaded="UserControl_Loaded"
              Padding="20"
              prism:ViewModelLocator.AutoWireViewModel="True">
@@ -13,7 +14,7 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="納品日：" VerticalAlignment="Center"/>
-            <DatePicker x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200" />
+            <models:DatePickerEx x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200" />
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
