--- a/src/LargeDist/Views/MainLargeDist.xaml
+++ b/src/LargeDist/Views/MainLargeDist.xaml
@@ -1,12 +1,13 @@
 ﻿<UserControl x:Class="LargeDist.Views.MainLargeDist"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
-             xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
+             xmlns:models="clr-namespace:WindowLib.Models;assembly=WindowLib"
+             xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
              mc:Ignorable="d"
              Loaded="UserControl_Loaded"
              prism:ViewModelLocator.AutoWireViewModel="True">
@@ -64,7 +65,7 @@
             <StackPanel Orientation="Vertical" Grid.Column="1">
                 <StackPanel Orientation="Horizontal">
                     <Label Content="納品日：" VerticalAlignment="Center" />
-                    <DatePicker Language="ja" SelectedDate="{Binding DeliveryDate}" Width="120" />
+                    <models:DatePickerEx Language="ja" SelectedDate="{Binding DeliveryDate}" Width="120" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="担当者：" VerticalAlignment="Center"/>
