0007277: 大仕分処理　【大仕分グループ一覧】画面でまだ大仕分を1件も作業していない時、で「状態」は空白になりましたが、「残商品数」が’０’です。残商品数を表示して下さい。

--- a/src/LargeDist/Views/MainLargeDist.xaml
+++ b/src/LargeDist/Views/MainLargeDist.xaml
@@ -102,7 +102,7 @@
                 <DataGridTextColumn Header="大仕分グループ" Binding="{Binding CdLargeGroup}"/>
                 <DataGridTextColumn Header="大仕分グループ名称" Binding="{Binding NmLargeGroup}"/>
                 <DataGridTextColumn Header="予定商品数" Binding="{Binding OrderItemCount}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="残商品数" Binding="{Binding ResultItemCount}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="残商品数" Binding="{Binding RemainItemCount}" ElementStyle="{StaticResource RightTextElement}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
