--- a/src/DistLargePrint/Views/SelectDistLargeGroupDlg.xaml
+++ b/src/DistLargePrint/Views/SelectDistLargeGroupDlg.xaml
@@ -23,7 +23,8 @@
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="3">
             <TextBlock Text="納品日" Width="150" VerticalAlignment="Center" Margin="3"/>
             <TextBlock Text=":" VerticalAlignment="Center" Margin="3"/>
-            <models:DatePickerEx SelectedDate="{Binding DeliveryDate}" Language="ja" Width="150" VerticalAlignment="Center" Margin="3"/>
+            <models:DatePickerEx SelectedDate="{Binding DeliveryDate}" Language="ja" Width="150" VerticalAlignment="Center" Margin="3"
+                                 PreviewKeyDown="DatePicker_PreviewKeyDown"/>
         </StackPanel>
 
         <TextBlock DockPanel.Dock="Top" Text="{Binding ErrorMessage}" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
