--- a/src/TakahataDistListPrint/Views/SelectDeliveryDateDlg.xaml
+++ b/src/TakahataDistListPrint/Views/SelectDeliveryDateDlg.xaml
@@ -14,7 +14,7 @@
 
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="納品日：" VerticalAlignment="Center"/>
-            <models:DatePickerEx x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200"/>
+            <models:DatePickerEx x:Name="Date" SelectedDate="{Binding Date}" Language="ja" Width="200" PreviewKeyDown="DatePicker_PreviewKeyDown"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
