#0007286: 配分処理　『抜取り』で表示器を点灯させ、表示器を押下していない状態で『中断』ボタンを押下したらその商品は抜取りが完了になった。表示器を押下していないので抜取りはしないはずです。 #0007287: 配分処理　『抜取り』を行った際に、【大仕分処理】もクリアしていますが、【大仕分処理】はクリアしないで下さい。小仕分の配分作業したブロックの仕分グループの分だけをクリアして下さい。 #0007292: 配分処理　【商品スキャン】画面や【商品一覧】の小見出しの文字が小さくして多くの項目が表示できる様にして下さい。

--- a/src/Picking/Views/MainPicking.xaml
+++ b/src/Picking/Views/MainPicking.xaml
@@ -254,12 +254,12 @@
 
                     <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DistType_name}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="担当者" Width="Auto" Binding="{Binding NmShain}" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="仕分商品種類" Width="Auto" Binding="{Binding DisplayDistitem_cnt}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="仕分&#xa;商品種類" Width="Auto" Binding="{Binding DisplayDistitem_cnt}" IsReadOnly="True"/>
 
                     <DataGridTextColumn Header="予定数" Width="Auto" Binding="{Binding Display_Dops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="残数" Width="Auto" Binding="{Binding Display_Ddps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="店舗予定" Width="Auto" Binding="{Binding DisplayOrderShop_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="店舗残" Width="Auto" Binding="{Binding DisplayRemainShop_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="店舗&#xa;予定" Width="Auto" Binding="{Binding DisplayOrderShop_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="店舗&#xa;残数" Width="Auto" Binding="{Binding DisplayRemainShop_cnt}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
                 </DataGrid.Columns>
             </DataGrid>
 
