--- a/src/Picking/Views/DistDetailWindow.xaml
+++ b/src/Picking/Views/DistDetailWindow.xaml
@@ -84,20 +84,26 @@
                   AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DStatus_name}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="棚No" Width="Auto" Binding="{Binding Tdunitaddrcode}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="通路" Width="Auto" Binding="{Binding Tdunitzonecode}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="コース" Width="Auto" Binding="{Binding CdCourse}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="配送順" Width="Auto" Binding="{Binding CdRoute}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="得意先" Width="Auto" Binding="{Binding CdTokuisaki}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="得意先名" Width="Auto" Binding="{Binding NmTokuisaki}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="予定総個数" Width="Auto" Binding="{Binding Ops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="予定箱" Width="Auto" Binding="{Binding Display_Dops_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="予定ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Dops_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="残箱" Width="Auto" Binding="{Binding Display_Ddps_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="残ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Ddps_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="済箱" Width="Auto" Binding="{Binding Display_Drps_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="済ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Drps_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="状態" Width="Auto" Binding="{Binding DStatus_name}" ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="棚No" Width="Auto" Binding="{Binding Tdunitaddrcode}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="通路" Width="Auto" Binding="{Binding Tdunitzonecode}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="コース" Width="Auto" Binding="{Binding CdCourse}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="配送順" Width="Auto" Binding="{Binding CdRoute}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="得意先" Width="Auto" Binding="{Binding CdTokuisaki}"  ElementStyle="{StaticResource LeftTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="得意先名" Width="Auto" Binding="{Binding NmTokuisaki}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="予定&#xa;総個数" Width="Auto" Binding="{Binding Ops}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="予定&#xa;箱" Width="Auto" Binding="{Binding Display_Dops_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="予定&#xa;ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Dops_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="残&#xa;箱" Width="Auto" Binding="{Binding Display_Ddps_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="残&#xa;ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Ddps_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="済&#xa;箱" Width="Auto" Binding="{Binding Display_Drps_Cs}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="済&#xa;ﾊﾞﾗ" Width="Auto" Binding="{Binding Display_Drps_Ps}" HeaderStyle="{StaticResource RightHeader}" ElementStyle="{StaticResource RightTextElement}" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
