--- a/src/lib/WindowLib/Resources/Standard.xaml
+++ b/src/lib/WindowLib/Resources/Standard.xaml
@@ -156,6 +156,13 @@
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
     </Style>
 
+    <!-- データグリッドText左寄せ -->
+    <Style x:Key="LeftTextElement" TargetType="{x:Type TextBlock}">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,0,5,0"/>
+    </Style>
+    
     <!-- データグリッドText右寄せ -->
     <Style x:Key="RightTextElement" TargetType="{x:Type TextBlock}">
         <Setter Property="HorizontalAlignment" Value="Right"/>
