--- a/src/StowageListPrint/Views/InputStowageDlg.xaml
+++ b/src/StowageListPrint/Views/InputStowageDlg.xaml
@@ -105,7 +105,7 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Width="125" Command="{Binding OK}" Margin="5" IsDefault="True">
+            <Button Grid.Column="0" Width="125" Command="{Binding OK}" Margin="5">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Check" VerticalAlignment="Center"/>
                     <TextBlock Text="OK" Margin="3,0,0,0"/>
