0007324:積付表発行　「その他」の右側にＨＴで作業した「作業日時」を表示して下さい。

--- a/src/StowageListPrint/Views/MainStowageListPrint.xaml
+++ b/src/StowageListPrint/Views/MainStowageListPrint.xaml
@@ -115,6 +115,7 @@
                 <DataGridTextColumn Header="薄箱" Binding="{Binding DispSmallBoxPs}" ElementStyle="{StaticResource RightTextElement}"/>
                 <DataGridTextColumn Header="青箱" Binding="{Binding DispBlueBoxPs}" ElementStyle="{StaticResource RightTextElement}"/>
                 <DataGridTextColumn Header="その他" Binding="{Binding DispEtcBoxPs}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="作業日時" Binding="{Binding DtWorkdtStowage, StringFormat=yyyy/MM/dd HH:mm:ss}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
