0007304: ほとんどの画面についてですが、小見出しの項目をクリックしたままドラッグすると項目が移動し、入れ替わる様です。次表示した時も入れ替わったままの様ですが、入れ替わらない様になりませんか。

--- a/src/lib/WindowLib/Resources/Standard.xaml
+++ b/src/lib/WindowLib/Resources/Standard.xaml
@@ -119,6 +119,7 @@
         <Setter Property="SelectionMode" Value="Single"/>
         <Setter Property="SelectionUnit" Value="FullRow"/>
         <Setter Property="GridLinesVisibility" Value="All"/>
+        <Setter Property="CanUserReorderColumns" Value="False"/>
     </Style>
 
     <!-- データグリッドヘッダー背景 -->
