0007333:大仕分リスト発行　画面上部に「大仕分G：」を表示していますが、大仕分グループコードの右側に「大仕分グループ名称」を表示して下さい。 0007334:大仕分リスト発行　起動して【大仕分グループ選択】画面を表示しますが、「大仕分グループ」を指定すると「大仕分グループ名称」を表示して下さい。

--- a/src/DistLargePrint/Views/MainDistLargePrint.xaml
+++ b/src/DistLargePrint/Views/MainDistLargePrint.xaml
@@ -74,7 +74,7 @@
             <StackPanel Grid.Column="1" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="大仕分G：" TextAlignment="Right" Width="150"/>
-                    <TextBlock Text="{Binding CdLargeGroup}"/>
+                    <TextBlock Text="{Binding LargeGroupInfo}"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
