#0007337: 表示器テスト　一つボタンなので何色でもボタン押下で消灯して下さい。 #0007338: 表示器テスト　「スタート表示器」は対象の色を点灯して下さい。

--- a/src/LightTest/Views/MainLightTest.xaml
+++ b/src/LightTest/Views/MainLightTest.xaml
@@ -229,7 +229,11 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <CheckBox IsChecked="{Binding Select, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <CheckBox IsChecked="{Binding Select, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                            <CheckBox.LayoutTransform>
+                                                <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                            </CheckBox.LayoutTransform>
+                                        </CheckBox>
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
